[package]
name = "msnmp"
description = "SNMP command line utility"
version = "0.1.0"
authors = ["David Dufresne <davedufresne@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/davedufresne/modern_snmp"
keywords = ["snmp", "snmpv3" ]
categories = ["command-line-utilities"]

[dependencies]
exitfailure = "0.5.1"
failure = "0.1.8"
rand = "0.7.3"
snmp_mp = { path = "../snmp_mp" }
snmp_usm = { path = "../snmp_usm" }
structopt = "0.3.17"
