[package]
name = "msnmp"
description = "SNMP command line utility"
version = "0.1.1"
authors = ["David Dufresne <davedufresne@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/davedufresne/modern_snmp"
keywords = ["snmp", "snmpv3" ]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
rand = "0.8.4"
snmp_mp = { path = "../snmp_mp" }
snmp_usm = { path = "../snmp_usm" }
structopt = "0.3.17"
